@@ -73,6 +73,9 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
     - Use an absolute symlink for /lib64 on amd64
   * Add myself to Uploaders.
   * Switch to gcc-4.0 on powerpc.
+  * Remove old hack for gcc-3.4 on amd64.
+  * Build with the compiler defined as default for glibc (ie currently 
+    gcc-4.0) instead of gcc on amd64.
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
